--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "framer-motion": "^12.23.24",
     "jspdf": "^3.0.3",
     "jspdf-autotable": "^5.0.2",
+    "lottie-react": "^2.4.1",
     "lucide-react": "^0.545.0",
     "next": "15.4.4",
     "react": "19.1.0",
