--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.75.0",
+    "framer-motion": "^12.23.26",
     "lucide-react": "^0.545.0",
     "next": "15.4.4",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "react-icons": "^5.5.0"
+    "react-icons": "^5.5.0",
+    "recharts": "^3.6.0",
+    "twilio": "^5.10.7"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
