--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react-dom": "19.1.0",
     "react-icons": "^5.5.0",
     "recharts": "^3.6.0",
-    "twilio": "^5.10.7"
+    "twilio": "^5.10.7",
+    "uuid": "^13.0.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
