--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.75.0",
+    "@upstash/redis": "^1.35.8",
     "file-saver": "^2.0.5",
     "framer-motion": "^12.23.26",
     "jspdf": "^3.0.4",
